# RecodeDaemon

./: .gitignore  ArgsParser.py  Daemon.py  LICENSE  Queue.py  README.md  RecodeHandler.py  Recoder.py  SharedState.py  SocketHandler.py  __main__.py  cli.py  flake.nix  main.py  pyproject.toml  shell.nix  tests.py
nix/: module.nix  recodeDaemon.nix
src/recodeDaemon/: argsParser.py  cli.py  lib.py  queue.py  recoder.py  sharedState.py  status.py
